  to the first/last visible line. Also, even if, for example, the caret is
  already at the start of the line, HOME still needs to be pressed three
  times to go to the start of the viewscreen. This should make these
  commands more reliable in macros

+ Enhancements

- 'Go to End Of Indent' command removed (just use HOME instead); shortcut
  of 'Indent Selected Lines' changed to C+i

* Version 2.5pre4

+ New Features

- The tool bar can be edited in Utilities->Global Options->Tool Bar
- For plugin developers: new EnhancedFrame class provides automatic
  Enter/Escape key handling for JFrames
- New RegistersChanged message is sent when the value of a register changes
- Position registers and markers are highlighted in the gutter
- 'Go to Next Marker' and 'Go to Previous Marker' commands added

+ Enhancements

- Single-clicks in the results list of the 'find file' widget will now
  select that file in the file chooser
- Broken plugins will no longer prevent the 'Plugins' menu from appearing
- HyperSearch is now a frame, not a dialog box
- Documentation updates
- PHP mode now highlights statements with '@' better
- The gutter now only repaints lines which really need repainting
- File chooser is now a little bit wider
- Shell scripts used to create the jEdit installer are now included in
  the 'jEdit source' fileset

+ Bug Fixes

- FTP didn't work at all (since 2.5pre3)
- Fixed NPE that could occur when performing an undo (since 2.5pre1)
- Added jEdit.getPlugin(String name) method, which was missing in 2.5pre3
- Shell script mode didn't highlight some variables correctly (since 2.4pre2)
- Gutter highlight tool tips didn't work (this bug was never encountered
  in practice since no plugins actually used gutter highlights)
- Fixed possible NPE in focus handling code
- Mode option pane didn't save settings sometimes
- Tab size setting in mode XML files was ignored
- Povray mode had an incorrect 'label' property
- Fixed ArrayIndexOutOfBoundsException in 'end' action
